infra/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tourdevino
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 40001
      targetPort: 40001
