infra/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: tourdevino
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 40000
      targetPort: 40000
